# case_management

./: README.md  pyproject.toml
case_management/: hooks.py
case_management/case_management/doctype/age_group/: age_group.py  test_age_group.py
case_management/case_management/doctype/age_groups/: age_groups.py
case_management/case_management/doctype/basic_information/: basic_information.py  test_basic_information.py
case_management/case_management/doctype/case_action_plan/: case_action_plan.py  test_case_action_plan.py
case_management/case_management/doctype/case_plan_tracker/: case_plan_tracker.py  test_case_plan_tracker.py
case_management/case_management/doctype/cash_assessment/: cash_assessment.py  test_cash_assessment.py
case_management/case_management/doctype/comprehensive_reason/: comprehensive_reason.py  test_comprehensive_reason.py
case_management/case_management/doctype/comprehensive_reasons/: comprehensive_reasons.py
case_management/case_management/doctype/cp_assessment/: cp_assessment.py  test_cp_assessment.py
case_management/case_management/doctype/cp_case/: cp_case.py  test_cp_case.py
case_management/case_management/doctype/cp_closure_form/: cp_closure_form.py  test_cp_closure_form.py
case_management/case_management/doctype/emotional_state/: emotional_state.py  test_emotional_state.py
case_management/case_management/doctype/emotional_states/: emotional_states.py
case_management/case_management/workspace/: case_management.json
case_management/config/: case_management.py  cpbns.py
case_management/cpbns/workspace/: cpbns.json
(+122 files in other folders)
